# rare

./: .gitignore  README.md  predict_sample.ipynb  pyproject.toml  train.py  train_bdi.py
config/: rare.yaml  test.yaml  train.yaml
docs/diagram/: class.drawio
src/: train.py
src/dataset/: bdi_dataset.py  dataset.py  label_file.py  valid_dataset.py
src/debug/: __init__.py  create_dataset_sample.ipynb
src/model/: converter.py  lang_model.py  rare.py
src/model/components/: decoder.py  feat_extraction.py  prediction.py
src/runner/: evaluater.py  loss.py  trainer.py
tests/: conftest.py  test_converter.py  test_dataset.py  test_model.py
tests/assets/annotations/0000/: 000000000.json  000000001.json  000000002.json
tests/assets/config/: rare.yaml  text_raw_data.yaml  train.yaml
