[tool.poetry]
name = "rare"
version = "0.1.0"
description = ""
authors = ["sakamaki"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
torch = "^1.13.1"
torchvision = "^0.14.1"
omegaconf = "^2.3.0"
pytorch-lightning = "^1.8.5.post0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
