[tool.poetry]
name = "rare"
version = "0.1.0"
description = ""
authors = ["sakamaki"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
omegaconf = "^2.3.0"
scipy = "^1.9.3"
mlflow = "^2.1.1"
loguru = "^0.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
flake8 = "^6.0.0"
ipykernel = "^6.19.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
